--- a/style.css
+++ b/style.css
@@ -1,6 +1,13 @@
 @font-face {
-    font-family: Bebas Neue Bold;
-    src: url("font/BebasNeue/BebasNeue-Bold.ttf");
+    font-family: Bebas Neue Thin;
+    src: url("font/BebasNeue/BebasNeue-Thin.ttf");
+    font-weight: normal;
+}
+
+@font-face {
+    font-family: Simplifica;
+    src: url("font/Simplifica.ttf");
+    font-weight: normal;
 }
 
 html, body {
@@ -11,20 +18,33 @@ html, body {
 #home {
     width: 100%;
     height: 100%;
-    background-color: gray;
+    background-color: #29303e;
 }
 
-#title {
+h1 {
     margin-top: 0;
-    padding-top: 75vh;
-    padding-left: 3vh;
-    font-family: Bebas Neue Bold, serif;
-    font-size: 10vw;
+    margin-left: 3vh;
+    padding-top: 55vh;
+    font-family: Bebas Neue Thin, sans-serif;
+    font-size: 30vh;
+    color: red;
+}
+
+h2 {
+    margin-top: 0;
+    margin-left: 5vh;
+    font-family: Bebas Neue Thin, sans-serif;
+    font-size: 5vw;
     color: red;
 }
 
 #about {
     width: 100%;
     height: 100%;
-    background-color: white;
+    background-color: lightgray;
+}
+
+.content {
+    font-family: Simplifica, sans-serif;
+    font-size: 10vh;
 }
