--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ h1 {
     margin-top: 0;
     margin-bottom: 0;
     position: relative;
-    bottom: 30px;
+    bottom: 20px;
 }
 
 .logos {
@@ -61,6 +61,11 @@ h1 {
     font-size: 3vw;
     padding: 0 10px 0 10px;
     /*margin-top: 60vh;*/
+}
+
+#about {
+    background-color: lightgray;
+    display: flex;
 }
 
 #portrait {
@@ -71,16 +76,9 @@ h1 {
 
 h2 {
     margin-top: 0;
-    margin-left: 5vh;
     font-family: Bebas Neue Thin, sans-serif;
     font-size: 5vw;
     color: red;
-}
-
-#about {
-    /*width: 100%;*/
-    /*height: 100%;*/
-    background-color: lightgray;
 }
 
 .content {
