--- a/style.css
+++ b/style.css
@@ -53,35 +53,45 @@ h1 {
     margin-top: 0;
     margin-bottom: 0;
     position: relative;
-    bottom: 20px;
+    bottom: 15px;
 }
 
 .logos {
     color: white;
     font-size: 3vw;
     padding: 0 10px 0 10px;
-    /*margin-top: 60vh;*/
 }
 
 #about {
     background-color: lightgray;
     display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.column {
+    flex-grow: 1;
+    flex-basis: 0;
 }
 
 #portrait {
-    padding: 5vh 0 0 7vh; /* top right bottom left */
-    max-width: 100%;
+    /*padding: 5vh 0 0 7vh; !* top right bottom left *!*/
+    max-width: 65%;
     height: auto;
+    display: block;
+    margin: 5vh auto auto;
 }
 
 h2 {
-    margin-top: 0;
+    margin-top: 5vh;
     font-family: Bebas Neue Thin, sans-serif;
-    font-size: 5vw;
+    font-size: 10vw;
     color: red;
+    width: 80%;
 }
 
 .content {
-    font-family: Simplifica, sans-serif;
-    font-size: 10vh;
+    /*font-family: 'JetBrains Mono', monospace;*/
+    font-family: 'Poppins', sans-serif;
+    font-size: 3vw;
 }
