--- a/style.css
+++ b/style.css
@@ -52,8 +52,9 @@ h1 {
     color: red;
     margin-top: 0;
     margin-bottom: 0;
-    position: relative;
-    bottom: 15px;
+    /* TODO: Adjust the spacing above the title */
+    /*position: relative;*/
+    /*bottom: 15px;*/
 }
 
 .logos {
@@ -70,17 +71,17 @@ h1 {
 
 h2 {
     margin: 0 0 0 0;
-    padding-top: 50px;
-    padding-left: 50%;
+    padding-top: 1.5vh;
+    padding-left: 52vw;
     font-family: Bebas Neue Thin, sans-serif;
-    font-size: 10vw;
+    font-size: 7vw;
     color: red;
 }
 
 #about-row {
     display: flex;
     justify-content: center;
-    align-items: flex-start;
+    align-items: center;
 }
 
 .column {
@@ -90,13 +91,17 @@ h2 {
 
 #portrait {
     /*padding: 5vh 0 0 7vh; !* top right bottom left *!*/
-    max-width: 65%;
+    /*margin-left: 65%;*/
+    max-width: 30%;
     height: auto;
-    display: block;
-    margin: 5vh auto auto;
+    float: right;
+    margin-right: 2vw;
 }
 
 .content {
     font-family: 'Poppins', sans-serif;
-    font-size: 2vw;
+    font-size: 1.5vw;
+    margin-top: 0;
+    padding-left: 2vw;
+    padding-right: 8vw;
 }
