--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ TODO:
 
 .section-container {
     min-width: 100%;
-    display: flex;
+    display: flex; /* This causes issues with iframe */
     flex-direction: column;
     justify-content: center; /* centered along main axis (vertically) */
     align-items: center; /* centered along main axis (horizontally) */
@@ -66,7 +66,6 @@ h1 {
     font-family: Bebas Neue Regular, sans-serif;
     letter-spacing: 0.3vw;
     font-size: clamp(10rem, 10rem + 3vw, 20rem);
-    /* color: black; */
     color: #DB162F;
     margin-top: 0;
     margin-bottom: 0;
@@ -226,10 +225,44 @@ a.projects-tab-text:hover {
 
 #fencing {
     background-color: lightgray;
+    min-height: 100%;
+    justify-content: flex-start;
+    padding-bottom: 0;
 }
 
 #fencing-title {
     color: #DB162F;
+}
+
+
+/* Code for the responsive iframe was obtained from
+https://avexdesigns.com/blog/responsive-youtube-embed. Was modified since this
+code does not work well with flexboxes. Specifically, the height needed to be
+specified for both the container and the iframe */
+.video-container {
+    position: relative;
+    padding-bottom: 25%;
+    padding-top: 30px;
+    min-height: 169px;
+    width: 40vw;
+    min-width: 300px;
+    overflow: hidden;
+}
+
+.video-container iframe, .video-container object, .video-container embed { 
+    position: absolute; 
+    top: 0; 
+    left: 0; 
+    width: 100%;
+    height: 22.5vw;
+    min-height: 169px;
+}
+
+#fencing-info {
+    min-width: 350px;
+    width: 55vw;
+    text-align: center;
+    margin-bottom: 50px;
 }
 
 /* For the coursework section */
