--- a/style.css
+++ b/style.css
@@ -234,29 +234,26 @@ a.projects-tab-text:hover {
     color: #DB162F;
 }
 
-
-/* Code for the responsive iframe was obtained from
-https://avexdesigns.com/blog/responsive-youtube-embed. Was modified since this
-code does not work well with flexboxes. Specifically, the height needed to be
-specified for both the container and the iframe */
 .video-container {
     position: relative;
-    padding-bottom: 25%;
-    padding-top: 30px;
-    min-height: 169px;
-    width: 40vw;
-    min-width: 300px;
     overflow: hidden;
-}
-
-.video-container iframe, .video-container object, .video-container embed { 
-    position: absolute; 
-    top: 0; 
-    left: 0; 
+    /* width: 100%; */
+    width: 55vw;
+    min-width: 300px;
+    padding-top: max(169px, 31vw); /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
+  }
+  
+  /* Then style the iframe to fit in the container div with full height and width */
+.responsive-iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
     width: 100%;
-    height: 22.5vw;
-    min-height: 169px;
-}
+    height: 100%;
+  }
+
 
 #fencing-info {
     min-width: 350px;
