--- a/style.css
+++ b/style.css
@@ -95,6 +95,10 @@ h1 {
     align-items: center;
 }
 
+#navbar-header {
+    display: none;
+}
+
 #arrow-down {
     color: black;
     font-size: clamp(2rem, 1.5rem + 0.2vw, 4rem);
@@ -149,7 +153,11 @@ h1 {
     position: fixed;
     top: calc(0.6 * max(6vw, 100px) + 20px);
     left: 6.5vw;
-  }
+}
+
+.fixed-mobile {
+    display: fixed;
+}
 
 #about {
     background-color: lightgray;
@@ -359,10 +367,43 @@ a.projects-tab-text:hover {
     #arrow-box {
         left: 0;
         width: 100%;
+        position: static;
     }
 
+    #home {
+        height: calc(100vh - (0.6 * max(6vw, 100px)));
+    }
+
+    #navbar-header {
+        display: flex;
+        position: -webkit-sticky;
+        position: sticky;
+        top: 0;
+        width: 100%;
+        height: 40px;
+        background-color: #292929;
+    }
+
+    #navbar-button {
+        background-color: transparent;
+        border: none;
+    }
+
+    #navbar-button-logo {
+        color: white;
+        font-size: 1.5rem;
+    }
+    
     #navbar {
         display: none;
+        width: 100%;
+        left: 0;
+        top: 40px;
+        z-index: 1;
+    }
+
+    #navbar a.navbar-link {
+        width: 100%;
     }
 }
 
