--- a/style.css
+++ b/style.css
@@ -17,7 +17,6 @@ html {
 
 html, body {
     margin: 0;
-    /* height: 100%; */
 }
 
 body { /* For iPhone notch */
@@ -368,16 +367,15 @@ a.projects-tab-text:hover {
 /* For the navbar */
 @media screen and (max-width: 800px) {
     #arrow-box {
-        /* left: 0; */
-        width: 100%;
         position: static;
-        /* bottom: 0; */
+        width: 100%;
     }
 
-    #home {
-        min-height: calc(100vh - (0.6 * max(6vw, 100px)));
-        /* min-height: 100vh; */
-        height: -webkit-fill-available;
+    #home-content {
+        flex-grow: 1;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
     }
 
     #fencing {
