--- a/style.css
+++ b/style.css
@@ -52,7 +52,9 @@ TODO:
 }
 
 #home {
-    height: 100vh;
+    min-height: 100vh;
+    /* mobile viewport bug fix */
+    min-height: -webkit-fill-available;
     background-color: #292929;
 }
 
