Change to min height? Does thhis work?

--- a/style.css
+++ b/style.css
@@ -379,8 +379,8 @@ a.projects-tab-text:hover {
     }
 
     #home {
-        height: 100vh;
-        height: -webkit-fill-available;
+        min-height: 100vh;
+        min-height: -webkit-fill-available;
     }
 
     #fencing {
