One last try, but I kinda give up

--- a/style.css
+++ b/style.css
@@ -379,8 +379,10 @@ a.projects-tab-text:hover {
     }
 
     #home {
-        min-height: 100vh;
-        min-height: -webkit-fill-available;
+        height: 100%;
+        height: -moz-available; /* WebKit-based browsers will ignore this. */
+        height: -webkit-fill-available; /* Mozilla-based browsers will ignore this. */
+        height: fill-available;
     }
 
     #fencing {
