--- a/style.css
+++ b/style.css
@@ -11,11 +11,13 @@
 }
 
 html {
-    height: 100%;
     scroll-behavior: smooth;
 }
 
 html, body {
+    /* To correctly set height of home screen for mobile, we need to use 100%,
+    which relies on the parent elements, so these need to be 100% as well */
+    /* height: 100%; */
     margin: 0;
 }
 
@@ -49,7 +51,11 @@ TODO:
 }
 
 #home {
-    min-height: 100vh;
+    /* For mobile, vh uses the biggest possible viewport, which is when the
+    browser bar is minimized, but the home page will always be viewed with the
+    browser bar, so we use the CSS variable --vh, which is calculated in the JS
+    */
+    height: calc(100 * var(--vh));
     background-color: #292929;
 }
 
@@ -101,7 +107,6 @@ h1 {
 #arrow-down {
     color: black;
     font-size: clamp(2rem, 1.5rem + 0.2vw, 4rem);
-    position: absolute;
 }
 
 #navbar {
@@ -150,7 +155,7 @@ h1 {
 
 .sticky {
     position: fixed;
-    top: calc(0.6 * max(6vw, 100px) + 20px);
+    top: calc(0.6 * max(6vw, 100px));
     left: 6.5vw;
 }
 
@@ -375,13 +380,6 @@ a.projects-tab-text:hover {
         justify-content: center;
     }
 
-    #home {
-        height: 100%;
-        height: -moz-available; /* WebKit-based browsers will ignore this. */
-        height: -webkit-fill-available; /* Mozilla-based browsers will ignore this. */
-        height: fill-available;
-    }
-
     #fencing {
         min-height: calc(100vh - 50px);
     }
@@ -405,13 +403,21 @@ a.projects-tab-text:hover {
         color: white;
         font-size: 1.5rem;
     }
+
+    .absolute {
+        position: absolute;
+        top: calc(100 * var(--vh) + 50px);
+    }
+    
+    .sticky {
+        position: fixed;
+        top: 50px;
+    }
     
     #navbar {
         display: none;
-        position: sticky;
         width: 100%;
         left: 0;
-        top: 50px;
         z-index: 1;
     }
 
