--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body { /* For iPhone notch */
 
 /*
 TODO:
- * Mobile navbar should be closed 
+ * Mobile navbar should be closed
  */
 
 .section-container {
@@ -426,7 +426,9 @@ a.projects-tab-text:hover {
     }
 
     #about, #education, #experience, #projects, #fencing {
-        scroll-margin-top: 50px;
+        padding-top: 70px;
+        /*  */
+        /* scroll-margin-top: 50px; */
     }
 }
 
